<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.af2020.week6.ui.home.HomeFragment"
        android:label="@string/menu_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.af2020.week6.ui.about.AboutFragment"
        android:label="@string/menu_title_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.af2020.week6.ui.contact.ContactFragment"
        android:label="@string/menu_title_contact"
        tools:layout="@layout/fragment_contact" />

</navigation>