<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week4.ConstraintLayoutActivity">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/header_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/happy_holidays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/happy_holidays"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ratingBar"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/header_image" />

    <TextView
        android:id="@+id/from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/from_ionut"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/happy_holidays"
        app:layout_constraintStart_toStartOf="@id/happy_holidays"
        app:layout_constraintTop_toBottomOf="@id/happy_holidays" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:src="@drawable/poster_sparkling"
        app:layout_constraintBottom_toBottomOf="@id/from"
        app:layout_constraintStart_toStartOf="@id/merry_christmas"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/star_big_on"
        app:layout_constraintEnd_toEndOf="@id/merry_christmas"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        android:contentDescription="@string/star_big" />

    <TextView
        android:id="@+id/merry_christmas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/merry_little_christmas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poster" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/merry_christmas"
        app:layout_constraintStart_toStartOf="@id/merry_christmas"
        app:layout_constraintTop_toBottomOf="@id/merry_christmas">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/let_it_snow" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/jingles_bells" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>